@@ -237,6 +237,7 @@ The bulk of these enhancements have been from Paarth Agarwal, who has been doing
  * Fix `updatemodulepaths` command for Python 3.7 (Matt Westcott)
  * Only show locale filter in choosers when i18n is enabled in settings (Matt Westcott)
  * Ensure that the live preview panel correctly clears the cache when a new page is created (Sage Abdullah)
+ * Ensure that there is a larger hoverable area for add block (+) within the Drafttail editor (Steven Steinwand)
 
 
 ## Upgrade considerations
